# gslides_automator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: data-flow.excalidraw
gslide_automator/: __init__.py  __main__.py  cli.py  drive_layout.py  generate_data.py  generate_report.py
gslides_automator/: __init__.py  __main__.py  auth.py  cli.py  drive_layout.py  gdrive_api.py  generate.py  generate_data.py  generate_report.py  gsheets_api.py  gslides_api.py  l1_generate.py  l2_generate.py  l3_generate.py  leaky_bucket.py  token_bucket.py  utils.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_drive_layout.py  test_gdrive_api.py  test_gsheets_api.py  test_gslides_api.py  test_integration.py  test_l1_generate.py  test_l2_generate.py  test_leaky_bucket.py  test_token_bucket.py  test_utils.py
